--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,8 @@
-<doctype html>
+<doctype html!>
+<head>
+	<title>Hello</title>	
+</head>
 <body>
-<p>Hello</p>
+	<p>Hello Sayang</p>
 </body>
 </html>
